@@ -1,28 +1,28 @@
-package milkman.plugin.ws;
+package milkman.plugin.sio;
 
 import milkman.domain.RequestContainer;
 import milkman.domain.RequestExecutionContext;
 import milkman.domain.ResponseContainer;
-import milkman.plugin.ws.domain.WebsocketAspect;
-import milkman.plugin.ws.domain.WebsocketRequestContainer;
-import milkman.plugin.ws.editor.WebSocketAspectEditor;
-import milkman.plugin.ws.editor.WebsocketRequestEditor;
+import milkman.plugin.sio.domain.SocketIOAspect;
+import milkman.plugin.sio.domain.SocketIORequestContainer;
+import milkman.plugin.sio.domain.SocketIoSettingsAspect;
+import milkman.plugin.sio.editor.SocketIOAspectEditor;
+import milkman.plugin.sio.editor.SocketIORequestEditor;
+import milkman.plugin.sio.editor.SocketIoSettingsAspectEditor;
 import milkman.ui.plugin.*;
-import milkman.ui.plugin.rest.domain.HeaderEntry;
 import milkman.ui.plugin.rest.domain.RestHeaderAspect;
 import milkman.utils.AsyncResponseControl.AsyncControl;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.UUID;
 
-public class WebsocketPlugin implements RequestAspectsPlugin, RequestTypePlugin {
+public class SocketIOPlugin implements RequestAspectsPlugin, RequestTypePlugin {
 
-	WebsocketProcessor requestProcessor = new WebsocketProcessor();
+	SocketIOProcessor requestProcessor = new SocketIOProcessor();
 	
 	@Override
 	public List<RequestAspectEditor> getRequestTabs() {
-		return Collections.singletonList(new WebSocketAspectEditor());
+		return List.of(new SocketIOAspectEditor(), new SocketIoSettingsAspectEditor());
 	}
 
 	@Override
@@ -32,13 +32,17 @@ public class WebsocketPlugin implements RequestAspectsPlugin, RequestTypePlugin 
 
 	@Override
 	public void initializeRequestAspects(RequestContainer request) {
-		if (request instanceof WebsocketRequestContainer) {
-			if (!request.getAspect(WebsocketAspect.class).isPresent())
-				request.addAspect(new WebsocketAspect());
-			
+		if (request instanceof SocketIORequestContainer) {
+			if (!request.getAspect(SocketIOAspect.class).isPresent()) {
+				request.addAspect(new SocketIOAspect());
+			}
+
+			if (!request.getAspect(SocketIoSettingsAspect.class).isPresent()) {
+				request.addAspect(new SocketIoSettingsAspect());
+			}
+
 			if (!request.getAspect(RestHeaderAspect.class).isPresent()) {
 				var headers = new RestHeaderAspect();
-				headers.getEntries().add(new HeaderEntry(UUID.randomUUID().toString(), "Content-Type", "application/json", true));
 				request.addAspect(headers);
 			}
 
@@ -58,12 +62,12 @@ public class WebsocketPlugin implements RequestAspectsPlugin, RequestTypePlugin 
 
 	@Override
 	public RequestContainer createNewRequest() {
-		return new WebsocketRequestContainer("New Websocket Request", "");
+		return new SocketIORequestContainer("New Socket.IO Request", "");
 	}
 
 	@Override
 	public RequestTypeEditor getRequestEditor() {
-		return new WebsocketRequestEditor();
+		return new SocketIORequestEditor();
 	}
 
 	@Override
@@ -74,18 +78,18 @@ public class WebsocketPlugin implements RequestAspectsPlugin, RequestTypePlugin 
 	@Override
 	public ResponseContainer executeRequestAsync(RequestContainer request, Templater templater,
 			AsyncControl asyncControl) {
-		return requestProcessor.executeRequest((WebsocketRequestContainer) request, templater, asyncControl);
+		return requestProcessor.executeRequest((SocketIORequestContainer) request, templater, asyncControl);
 
 	}
 	
 	@Override
 	public String getRequestType() {
-		return "WebSocket";
+		return "Socket.IO";
 	}
 
 	@Override
 	public boolean canHandle(RequestContainer request) {
-		return request instanceof WebsocketRequestContainer;
+		return request instanceof SocketIORequestContainer;
 	}
 
 	
